force-app/main/default/objects/Action__c/Action__c.object-meta.xml
<CustomObject>
    <label>Action</label>
    <nameField>
        <displayFormat>ACT-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Actions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>