force-app/main/default/objects/Action__c/fields/Command__c.field-meta.xml
<CustomField>
    <fullName>Command__c</fullName>
    <label>Command</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>