force-app/main/default/objects/Action__c/fields/Count_Events__c.field-meta.xml
<CustomField>
    <fullName>Count_Events__c</fullName>
    <label>Count Events</label>
    <summaryForeignKey>Event_X_Action__c.Action__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>