force-app/main/default/objects/Action__c/fields/EnabledAction__c.field-meta.xml
<CustomField>
    <fullName>EnabledAction__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Enabled Action</label>
    <type>Checkbox</type>
</CustomField>