force-app/main/default/objects/Action__c/fields/Expected__c.field-meta.xml
<CustomField>
    <fullName>Expected__c</fullName>
    <label>Expected</label>
    <length>255</length>
    <type>Text</type>
</CustomField>