force-app/main/default/objects/Action__c/fields/Fix__c.field-meta.xml
<CustomField>
    <fullName>Fix__c</fullName>
    <label>Fix</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>