force-app/main/default/objects/Action__c/fields/Operation__c.field-meta.xml
<CustomField>
    <fullName>Operation__c</fullName>
    <label>Operation</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Clear</fullName>
            </value>
            <value>
                <fullName>Check Contains</fullName>
            </value>
            <value>
                <fullName>Check Exact</fullName>
            </value>
            <value>
                <fullName>Check Path</fullName>
            </value>
            <value>
                <fullName>Execute</fullName>
            </value>
            <value>
                <fullName>Execute Async</fullName>
            </value>
            <value>
                <fullName>Bookmark</fullName>
            </value>
            <value>
                <fullName>JSON File - Check</fullName>
            </value>
            <value>
                <fullName>JSON File - Edit</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
            <value>
                <fullName>Open Application</fullName>
            </value>
            <value>
                <fullName>Write</fullName>
            </value>
            <value>
                <fullName>Include Event</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>