force-app/main/default/objects/Action__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <label>Order</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>