force-app/main/default/objects/Action__c/fields/Trailhead_Event__c.field-meta.xml
<CustomField>
    <fullName>Trailhead_Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Trailhead Event</label>
    <referenceTo>Event__c</referenceTo>
    <relationshipLabel>Actions</relationshipLabel>
    <relationshipName>Actions</relationshipName>
    <type>Lookup</type>
</CustomField>