force-app/main/default/objects/Action__c/fields/Trailhead_Event_Name__c.field-meta.xml
<CustomField>
    <fullName>Trailhead_Event_Name__c</fullName>
    <formula>Trailhead_Event__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Trailhead Event Name</label>
    <type>Text</type>
</CustomField>