force-app/main/default/objects/Action__c/validationRules/Event_Only_If_Expected.validationRule-meta.xml
<ValidationRule>
    <fullName>Event_Only_If_Expected</fullName>
    <active>false</active>
    <errorConditionFormula>if(ISBLANK(Trailhead_Event__c), ISPICKVAL(Operation__c,&quot;Include Event&quot;), NOT(ISPICKVAL(Operation__c,&quot;Include Event&quot;)))</errorConditionFormula>
    <errorDisplayField>Trailhead_Event__c</errorDisplayField>
    <errorMessage>Only assign an event if the operation is &quot;Include Event&quot;</errorMessage>
</ValidationRule>