force-app/main/default/objects/Action__c/validationRules/Must_have_ExtId.validationRule-meta.xml
<ValidationRule>
    <fullName>Must_have_ExtId</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(ExtId__c)</errorConditionFormula>
    <errorDisplayField>ExtId__c</errorDisplayField>
    <errorMessage>Must have ExtId</errorMessage>
</ValidationRule>