force-app/main/default/objects/Action__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Enabled__c</columns>
    <columns>Order__c</columns>
    <columns>AppName__c</columns>
    <columns>Operation__c</columns>
    <columns>Command__c</columns>
    <columns>Expected__c</columns>
    <columns>Fix__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>