force-app/main/default/objects/Action__c/listViews/All_simple.listView-meta.xml
<ListView>
    <fullName>All_simple</fullName>
    <columns>NAME</columns>
    <columns>AppName__c</columns>
    <columns>Order__c</columns>
    <columns>EnabledAction__c</columns>
    <filterScope>Everything</filterScope>
    <label>All (simple)</label>
</ListView>